used Locale.of instead of new Locale because it is deprecated and the replacement is available starting java 19 and also deleted instances of manifest argument of @Config. Missed the instances of manifest with more than one paramter in @Config in previous commits.