@@ -82,7 +82,7 @@ public class SpellCheckPluginTest {
     SpellCheckerSession fakeSpellCheckerSession = mock(SpellCheckerSession.class);
 
     when(fakeTextServicesManager.newSpellCheckerSession(
-            null, new Locale("en", "US"), spellCheckPlugin, true))
+            null, Locale.of("en", "US"), spellCheckPlugin, true))
         .thenReturn(fakeSpellCheckerSession);
 
     spellCheckPlugin.initiateSpellCheck("en-US", "Hello, wrold!", mockResult);
@@ -118,7 +118,7 @@ public class SpellCheckPluginTest {
     SpellCheckerSession fakeSpellCheckerSession = mock(SpellCheckerSession.class);
 
     when(fakeTextServicesManager.newSpellCheckerSession(
-            null, new Locale("en", "US"), spellCheckPlugin, true))
+            null, Locale.of("en", "US"), spellCheckPlugin, true))
         .thenReturn(fakeSpellCheckerSession);
 
     spellCheckPlugin.performSpellCheck("en-US", "Hello, wrold!");
@@ -138,7 +138,7 @@ public class SpellCheckPluginTest {
     SpellCheckPlugin spellCheckPlugin =
         spy(new SpellCheckPlugin(fakeTextServicesManager, fakeSpellCheckChannel));
     SpellCheckerSession fakeSpellCheckerSession = mock(SpellCheckerSession.class);
-    Locale english_US = new Locale("en", "US");
+    Locale english_US = Locale.of("en", "US");
 
     when(fakeTextServicesManager.newSpellCheckerSession(null, english_US, spellCheckPlugin, true))
         .thenReturn(fakeSpellCheckerSession);
@@ -165,7 +165,7 @@ public class SpellCheckPluginTest {
     SpellCheckPlugin spellCheckPlugin =
         spy(new SpellCheckPlugin(fakeTextServicesManager, fakeSpellCheckChannel));
     SpellCheckerSession fakeSpellCheckerSession = mock(SpellCheckerSession.class);
-    Locale english_US = new Locale("en", "US");
+    Locale english_US = Locale.of("en", "US");
 
     when(fakeTextServicesManager.newSpellCheckerSession(null, english_US, spellCheckPlugin, true))
         .thenReturn(fakeSpellCheckerSession);
