@@ -44,7 +44,7 @@ public class LocalizationPluginTest {
     Configuration config = mock(Configuration.class);
     DartExecutor dartExecutor = mock(DartExecutor.class);
     LocaleList localeList =
-        new LocaleList(new Locale("es", "MX"), new Locale("zh", "CN"), new Locale("en", "US"));
+        new LocaleList(Locale.of("es", "MX"), Locale.of("zh", "CN"), Locale.of("en", "US"));
     when(context.getResources()).thenReturn(resources);
     when(resources.getConfiguration()).thenReturn(config);
     when(config.getLocales()).thenReturn(localeList);
@@ -82,7 +82,7 @@ public class LocalizationPluginTest {
           "fr", "FR", "",
           "it", "IT", ""
         };
-    localeList = new LocaleList(new Locale("fr", "CH"));
+    localeList = new LocaleList(Locale.of("fr", "CH"));
     when(config.getLocales()).thenReturn(localeList);
     result = flutterJNI.computePlatformResolvedLocale(supportedLocales);
     // The call will use the new (> API 24) algorithm.
@@ -100,7 +100,7 @@ public class LocalizationPluginTest {
           "fr", "", "",
           "it", "IT", ""
         };
-    localeList = new LocaleList(new Locale("fr", "CH"));
+    localeList = new LocaleList(Locale.of("fr", "CH"));
     when(config.getLocales()).thenReturn(localeList);
     result = flutterJNI.computePlatformResolvedLocale(supportedLocales);
     // The call will use the new (> API 24) algorithm.
@@ -117,7 +117,7 @@ public class LocalizationPluginTest {
           "es", "ES", "",
           "it", "IT", ""
         };
-    localeList = new LocaleList(new Locale("fr", "CH"), new Locale("it", "CH"));
+    localeList = new LocaleList(Locale.of("fr", "CH"), Locale.of("it", "CH"));
     when(config.getLocales()).thenReturn(localeList);
     result = flutterJNI.computePlatformResolvedLocale(supportedLocales);
     // The call will use the new (> API 24) algorithm.
@@ -131,7 +131,7 @@ public class LocalizationPluginTest {
           "zh", "CN", "Hans",
           "zh", "HK", "Hant",
         };
-    localeList = new LocaleList(new Locale("zh", "CN"));
+    localeList = new LocaleList(Locale.of("zh", "CN"));
     when(config.getLocales()).thenReturn(localeList);
     result = flutterJNI.computePlatformResolvedLocale(supportedLocales);
     assertEquals(result.length, 3);
@@ -152,7 +152,7 @@ public class LocalizationPluginTest {
     Configuration config = mock(Configuration.class);
     DartExecutor dartExecutor = mock(DartExecutor.class);
     LocaleList localeList =
-        new LocaleList(new Locale("es", "MX"), new Locale("zh", "CN"), new Locale("en", "US"));
+        new LocaleList(Locale.of("es", "MX"), Locale.of("zh", "CN"), Locale.of("en", "US"));
     when(context.getResources()).thenReturn(resources);
     when(resources.getConfiguration()).thenReturn(config);
     when(config.getLocales()).thenReturn(localeList);
@@ -190,7 +190,7 @@ public class LocalizationPluginTest {
           "fr", "FR", "",
           "it", "IT", ""
         };
-    localeList = new LocaleList(new Locale("fr", "CH"));
+    localeList = new LocaleList(Locale.of("fr", "CH"));
     when(config.getLocales()).thenReturn(localeList);
     result = flutterJNI.computePlatformResolvedLocale(supportedLocales);
     // The call will use the new (> API 24) algorithm.
@@ -208,7 +208,7 @@ public class LocalizationPluginTest {
           "fr", "", "",
           "it", "IT", ""
         };
-    localeList = new LocaleList(new Locale("fr", "CH"));
+    localeList = new LocaleList(Locale.of("fr", "CH"));
     when(config.getLocales()).thenReturn(localeList);
     result = flutterJNI.computePlatformResolvedLocale(supportedLocales);
     // The call will use the new (> API 24) algorithm.
@@ -225,7 +225,7 @@ public class LocalizationPluginTest {
           "es", "ES", "",
           "it", "IT", ""
         };
-    localeList = new LocaleList(new Locale("fr", "CH"), new Locale("it", "CH"));
+    localeList = new LocaleList(Locale.of("fr", "CH"), Locale.of("it", "CH"));
     when(config.getLocales()).thenReturn(localeList);
     result = flutterJNI.computePlatformResolvedLocale(supportedLocales);
     // The call will use the new (> API 24) algorithm.
@@ -341,31 +341,31 @@ public class LocalizationPluginTest {
   @Test
   public void localeFromString_languageOnly() {
     Locale locale = LocalizationPlugin.localeFromString("en");
-    assertEquals(locale, new Locale("en"));
+    assertEquals(locale, Locale.of("en"));
   }
 
   @Test
   public void localeFromString_languageAndCountry() {
     Locale locale = LocalizationPlugin.localeFromString("en-US");
-    assertEquals(locale, new Locale("en", "US"));
+    assertEquals(locale, Locale.of("en", "US"));
   }
 
   @Test
   public void localeFromString_languageCountryAndVariant() {
     Locale locale = LocalizationPlugin.localeFromString("zh-Hans-CN");
-    assertEquals(locale, new Locale("zh", "CN", "Hans"));
+    assertEquals(locale, Locale.of("zh", "CN", "Hans"));
   }
 
   @Test
   public void localeFromString_underscore() {
     Locale locale = LocalizationPlugin.localeFromString("zh_Hans_CN");
-    assertEquals(locale, new Locale("zh", "CN", "Hans"));
+    assertEquals(locale, Locale.of("zh", "CN", "Hans"));
   }
 
   @Test
   public void localeFromString_additionalVariantsAreIgnored() {
     Locale locale = LocalizationPlugin.localeFromString("de-DE-u-co-phonebk");
-    assertEquals(locale, new Locale("de", "DE"));
+    assertEquals(locale, Locale.of("de", "DE"));
   }
 
   @Test
